Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
 
 <h4>
 <a name="-disambiguation-of-named-entities-in-news-articles" class="anchor" href="#-disambiguation-of-named-entities-in-news-articles"><span class="octicon octicon-link"></span></a>
-<a href="http://sumi1234.github.io/twitter-data-analytics"> Disambiguation of Named Entities in news articles</a><br>
+<a href="http://sumi1234.github.io/named-entity-disamb"> Disambiguation of Named Entities in news articles</a><br>
 </h4>
 
 <h4>
 <a name="-monitoring-and-management-of-enterprise-applications-using-jmx" class="anchor" href="#-monitoring-and-management-of-enterprise-applications-using-jmx"><span class="octicon octicon-link"></span></a>
-<a href="http://sumi1234.github.io/twitter-data-analytics"> Monitoring and Management of Enterprise Applications using JMX</a><br>
+<a href="http://sumi1234.github.io/monitoring-and-management-jmx"> Monitoring and Management of Enterprise Applications using JMX</a><br>
 </h4>
 
 <h4>
 <a name="-result-management-system-currently-being-used-at-dtu-" class="anchor" href="#-result-management-system-currently-being-used-at-dtu-"><span class="octicon octicon-link"></span></a>
-<a href="http://sumi1234.github.io/twitter-data-analytics"> Result Management System (currently being used at DTU)</a> <br>
+<a href="http://sumi1234.github.io/result-management-system"> Result Management System (currently being used at DTU)</a> <br>
 </h4>
 
 <h4>
 <a name="text-classification-system" class="anchor" href="#text-classification-system"><span class="octicon octicon-link"></span></a>
-<a href="http://sumi1234.github.io/twitter-data-analytics">Text Classification System</a><br>
+<a href="http://sumi1234.github.io/text-classification">Text Classification System</a><br>
 </h4>
 
 <h3>
 <a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>Checkout my Linkedin profile here : <a href="http://lnkd.in/B9PiHx">http://lnkd.in/B9PiHx</a><br>
+<p>Checkout my Linkedin profile <a href="http://lnkd.in/B9PiHx">here</a><br>
 I can be contacted through email here : <a href="mailto:sumedha.arora0@gmail.com">sumedha.arora0@gmail.com</a></p>
       </section>
       <footer>
